Changes js file to select_everything.js

--- a/app/views/curation_concern/base/_form_files_and_links.html.erb
+++ b/app/views/curation_concern/base/_form_files_and_links.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'browse_everything' %>
+<%= javascript_include_tag 'select_everything' %>
 <% unless curation_concern.persisted? %>
   <fieldset id="work-contents">
     <div class="row with-headroom">
@@ -27,18 +27,12 @@
 
        <fieldset class="span6">
         <p>Please click the button below to upload remote files.</p>
-        <%= form_tag('/file', id: 'main_form', method: 'post') do %>
-            <%= button_tag("Browse", type: 'button', class: 'btn btn-large btn-success', id: "browse-btn",
-                           'data-toggle' => 'browse-everything', 'data-route' => browse_everything_engine.root_path,
-                           'data-target' => '#main_form' ) %>
-            <%= button_tag("Submit", type: 'submit', class: 'btn btn-large btn-primary', id: "submit-btn") %>
-        <% end %>
-
-        <p id="status">0 items selected</p>
-      </fieldset>
+         <button type="button" class="btn btn-large btn-success" id="browse-btn">Browse!</button>
+       </fieldset>
     </div>
   </fieldset>
 <% end %>
+
 
 
 
